fix: update homepage url

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
     "service_worker": "eventPage.js"
   },
   "description": "Adds 'Upload with SnapX' button to image, video, audio and text selection context menu.",
-  "homepage_url": "https://github.com/BrycensRanch/SnapX",
+  "homepage_url": "https://github.com/SnapXL/SnapX",
   "icons": {
     "16": "Icons/SnapX-16.png",
     "48": "Icons/SnapX-48.png",
